Fixed text overflow

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,9 @@ li {
 	align-items: center;
 	background-color: var(--line-color-lighter);
 	border-radius: 8px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .direction-button-label-down {
